hello-world/frontend1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend1
  name: frontend1service
  namespace: default
spec:
  clusterIP: 172.20.168.231
  clusterIPs:
    - 172.20.168.231
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend1
  sessionAffinity: None
  type: ClusterIP
