hello-world/frontend2-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-05-08T05:28:20Z"
  labels:
    app: frontend2
  name: frontend2service
  namespace: default
spec:
  clusterIP: 172.30.150.82
  clusterIPs:
    - 172.30.150.82
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend2
  sessionAffinity: None
  type: ClusterIP
